update fullstack-blog link to netlify

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <h1> A Web Developer </h1>
             </div>
             <hr class="my-3">
-            <p class="text-center learn-more"> <a href="#section-about" class="text-light h4"> <u> Learn more </u> </a> </p>
+            <p class="text-center learn-more"> <a href="#section-about" class="text-light h4"> <u> Learn more </u> </a>
+            </p>
         </div>
     </section>
 
@@ -144,11 +145,15 @@
                                             to published posts. In-site contact form (implemented using Nodemailer)
                                         </li>
                                         <li class="pt-2">
-                                            Hosted and viewable on<a class="text-white"
-                                                href="https://conflict-continuum.herokuapp.com/" target="_blank">
-                                                <u>Heroku</u> </a>
-                                            (note: Heroku free version, initial
-                                            startup slow). Source code <a class="text-white"
+                                            Hosted and viewable on Netlify. <a class="text-white"
+                                                href="https://conflictcontinuum.netlify.app/" target="_blank">
+                                                <u>Customer Portal</u> </a>
+                                            
+                                                <a class="text-white" href="https://conflictcontinuum-admin.netlify.app/"
+                                                target="_blank">
+                                                <u>Administrator Portal.</u> (Admin sign up password: continuum) </a>
+
+                                                Source code <a class="text-white"
                                                 href="https://github.com/mvangin/blog_Fullstack" target="_blank"> <u>
                                                     here</u> </a>
                                         </li>
